--- a/openai_wds/config/config.json
+++ b/openai_wds/config/config.json
@@ -9,8 +9,8 @@
         "timeout": 60
     },
     "storage": {
-        "conversations_path": "data/conversations.json",
-        "prompts_path": "data/prompts.json"
+        "conversations_path": "./data/conversations.json",
+        "prompts_path": "./data/prompts.json"
     },
     "conversation": {
         "max_turns": 10,
