只保存对话内容而不是全部的传输给LLM1内容clear!

--- a/config/config.json
+++ b/config/config.json
@@ -1,19 +1,19 @@
 {
     "openai": {
         "api_key": "${OPENAI_API_KEY}",
-        "base_url": "http://127.0.0.1:11434/v1",
-        "model": "qwen2.5:0.5b",
+        "base_url": "http://180.85.206.46:10320/v1",
+        "model": "qwen2.5:32b",
         "temperature": 0.7,
         "max_tokens": 1000,
         "top_p": 1.0,
         "timeout": 60
     },
     "storage": {
-        "conversations_path": "../data/conversations.json",
-        "prompts_path": "../data/prompts.json"
+        "conversations_path": "data/conversations.json",
+        "prompts_path": "data/prompts.json"
     },
     "conversation": {
         "max_turns": 10,
         "truncate_mode": "sliding"
     }
-}
+} 
